<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriviaFragment">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="261dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/hola"
        android:textColor="#3C3EA5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="251dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="78dp"
        android:src="@drawable/whatsapp_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/a_que_logo_corresponde_esta_imagen"
        android:textColor="#3C3EA5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroupOpciones"
        android:layout_width="269dp"
        android:layout_height="222dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton"
            style="@style/radio_btn_style"
            android:text="@string/pertenece_a_facebook" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pertenece_a_twitter" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/radio_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pertenece_a_whatsapp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pertenece_a_instagram" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="78dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOpciones" />
</androidx.constraintlayout.widget.ConstraintLayout>